modify next theme color and fontsize

--- a/themes/next/source/css/_common/components/pages/archive.styl
+++ b/themes/next/source/css/_common/components/pages/archive.styl
@@ -24,7 +24,7 @@
       width: 10px;
       height: 10px;
       opacity: 0.5;
-      background: $black-light;
+      background: $green-light;
       border: 1px solid white;
 
       circle();
