--- a/themes/next/source/css/_common/components/post/post-expand.styl
+++ b/themes/next/source/css/_common/components/post/post-expand.styl
@@ -29,7 +29,7 @@
     .header-anchor{
       float: right;
       margin-left: 10px;
-      color: $grey-light;
+      color: $green-grey;
       border-bottom-style: none;
       visibility: hidden;
 
@@ -49,7 +49,7 @@
     box-sizing: border-box;
     margin: auto;
     padding: 3px;
-    border: 1px solid $gray-lighter;
+    border: 1px solid $green-light;
   }
 }
 
