--- a/themes/next/source/css/_common/components/post/post-meta.styl
+++ b/themes/next/source/css/_common/components/post/post-meta.styl
@@ -1,6 +1,6 @@
 .posts-expand .post-meta {
   margin: 3px 0 60px 0;
-  color: $grey-dark;
+  color: $green-dim;
   font-family: $font-family-posts;
   font-size: 12px;
   text-align: center;
@@ -10,7 +10,7 @@
     margin: 0;
     padding: 3px;
   }
-  .post-category-list-link { color: $grey-dark; }
+  .post-category-list-link { color: $green-grey; }
 }
 
 
