--- a/themes/next/source/css/_common/scaffolding/base.styl
+++ b/themes/next/source/css/_common/scaffolding/base.styl
@@ -44,7 +44,7 @@ p { margin: 0 0 25px 0; }
 a {
   color: $link-color;
   text-decoration: none;
-  border-bottom: 1px solid $grey-dark;
+  border-bottom: 1px solid $green-grey;
   word-wrap: break-word;
 
   &:hover {
@@ -72,7 +72,7 @@ hr {
   margin: 40px 0;
   height: 3px;
   border: none;
-  background-color: $gray-lighter;
+  background-color: $green-light;
   background-image: repeating-linear-gradient(
     -45deg,
     white,
@@ -85,7 +85,7 @@ hr {
 blockquote {
   padding: 0 15px;
   color: $grey-dim;
-  border-left: 4px solid $gray-lighter;
+  border-left: 4px solid $green-light;
 
   cite::before {
     content: "-";
