--- a/themes/next/source/css/_common/scaffolding/helpers.styl
+++ b/themes/next/source/css/_common/scaffolding/helpers.styl
@@ -52,7 +52,7 @@
 .translation {
   margin-top: -20px;
   font-size: 14px;
-  color: $grey-dark;
+  color: $green-dark;
 }
 
 // https://davidwalsh.name/detect-scrollbar-width
@@ -73,7 +73,7 @@
   border-radius: 0;
   width: 140px;
   outline: none;
-  border-bottom: 1px solid $grey-dark;
+  border-bottom: 1px solid $green-grey;
   background: inherit;
   opacity: 0.5;
   &:focus { opacity: 1; }
