--- a/themes/next/source/css/_common/components/header/site-nav.styl
+++ b/themes/next/source/css/_common/components/header/site-nav.styl
@@ -21,7 +21,7 @@
     margin: 0 -10px;
     padding: 0 10px;
     clear: both;
-    border-top: 1px solid $gray-lighter;
+    border-top: 1px solid $green-grass;
   }
   +tablet() { display: block !important; }
   +desktop() { display: block !important; }
