--- a/themes/next/source/css/_common/components/post/post-collapse.styl
+++ b/themes/next/source/css/_common/components/post/post-collapse.styl
@@ -48,7 +48,7 @@
       margin-top: -4px;
       width: 8px;
       height: 8px;
-      background: $grey;
+      background: $green-light;
       circle();
     }
   }
@@ -59,7 +59,7 @@
     position: relative;
     the-transition();
     transition-property: border;
-    border-bottom: 1px dashed $grey-light;
+    border-bottom: 1px dashed $green-grey;
 
     &::before {
       content: " ";
@@ -69,7 +69,7 @@
       width: 6px;
       height: 6px;
       margin-left: -4px;
-      background: $grey;
+      background: $green-light;
       circle();
       border: 1px solid white;
       the-transition();
@@ -78,9 +78,9 @@
   }
 
   .post-header:hover {
-    border-bottom-color: $grey-dim;
+    border-bottom-color: $green-dim;
 
-    &::before { background: $black-deep; }
+    &::before { background: $green-deep; }
   }
 
   .post-meta {
@@ -104,7 +104,7 @@
     }
 
     a {
-      color: $grey-dim;
+      color: $green-dim;
       border-bottom: none;
     }
   }
