--- a/themes/next/source/css/_common/components/post/post-nav.styl
+++ b/themes/next/source/css/_common/components/post/post-nav.styl
@@ -3,7 +3,7 @@
   margin-top: 60px;
   padding: 10px;
   white-space: nowrap;
-  border-top: 1px solid $gainsboro;
+  border-top: 1px solid $green-yellow;
 }
 
 .post-nav-item {
