--- a/themes/next/source/css/_common/components/post/post-title.styl
+++ b/themes/next/source/css/_common/components/post/post-title.styl
@@ -11,7 +11,6 @@
 .posts-expand .post-title-link {
   display: inline-block;
   position: relative;
-  color: $black-light;
   border-bottom: none;
   line-height: 1.2;
   vertical-align: top;
@@ -23,7 +22,7 @@
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #000;
+    background-color: $green-deep;
     visibility: hidden;
     transform: scaleX(0);
     the-transition();
