--- a/themes/next/source/css/_common/components/sidebar/sidebar-toggle.styl
+++ b/themes/next/source/css/_common/components/sidebar/sidebar-toggle.styl
@@ -5,7 +5,7 @@
   width: 15px;
   height: 15px;
   padding: 5px;
-  background: $black-deep;
+  background: $green-deep;
   line-height: 0;
   z-index: $zindex-5;
   cursor: pointer;
@@ -27,7 +27,7 @@
   vertical-align: top;
   height: 2px;
   width: 100%;
-  background: white;
+  background: $whitesmoke;
   margin-top: 3px;
 
   &:first-child { margin-top: 0; }
