--- a/themes/next/source/css/_common/components/sidebar/sidebar.styl
+++ b/themes/next/source/css/_common/components/sidebar/sidebar.styl
@@ -6,13 +6,13 @@
 
   width: 0;
   z-index: $zindex-4;
-  box-shadow: inset 0 2px 6px black;
-  background: $black-deep;
+  box-shadow: inset 0 2px 6px $green-dark;
+  background: $green-sidebar;
   -webkit-transform: translateZ(0); // http://stackoverflow.com/questions/17079857/position-fixed-broken-in-chrome-with-flash-behind
 
   a {
-    color: $grey-dark;
-    border-bottom-color: $black-light;
+    color: $green-grass;
+    border-bottom-color: $green-light;
     &:hover { color: $gainsboro; }
   }
 
@@ -27,7 +27,7 @@
 .sidebar-inner {
   position: relative;
   padding: 20px 10px;
-  color: $grey-dark;
+  color: $green-grass;
   text-align: center;
 }
 
