--- a/themes/next/source/css/_common/components/tags/blockquote-center.styl
+++ b/themes/next/source/css/_common/components/tags/blockquote-center.styl
@@ -20,12 +20,12 @@
   &::before {
     top: -20px;
     background-image: url($center-quote-left);
-    border-top: 1px solid $grey-light;
+    border-top: 1px solid $green-light;
   }
   &::after {
     bottom: -20px;
     background-image: url($center-quote-right);
-    border-bottom: 1px solid $grey-light;
+    border-bottom: 1px solid $green-light;
     background-position: 100% 8px;
   }
 
