--- a/themes/next/source/css/_variables/base.styl
+++ b/themes/next/source/css/_variables/base.styl
@@ -18,36 +18,43 @@ $grey-dim     = #666
 $black-light  = #555
 $black-dim    = #333
 $black-deep   = #222
-$red          = #ff2a2a
 $blue-bright  = #87daff
-$blue         = #0684bd
 $blue-deep    = #262a30
+$red          = #ff2a2a
 $orange       = #fc6423
 
-
+$green        = #15aecb
+$green-dim    = #00807e
+$green-yellow = #d8e58d
+$green-dark   = #4ab5a5
+$green-deep   = #288328
+$green-light  = #73c7c8
+$green-grass  = #c2d94e
+$green-grey   = #75c5b5
+$green-sidebar= #206920
 
 // Scaffolding
 // Settings for some of the most global styles.
 // --------------------------------------------------
 
 // Global text color on <body>
-$text-color                   = $black-light
+$text-color                   = $blue-deep
 
 // Global link color.
-$link-color                   = $black-light
-$link-hover-color             = $black-deep
-$link-decoration-color        = $grey-light
-$link-decoration-hover-color  = $black-deep
+$link-color                   = $green-deep
+$link-hover-color             = $green-light
+$link-decoration-color        = $green-grey
+$link-decoration-hover-color  = $green-light
 
 // Global border color.
-$border-color                 = $grey-light
+$border-color                 = $green-grey
 
 // Background color for <body>
-$body-bg-color                = white
+$body-bg-color                = $whitesmoke
 
 // Selection
-$selection-bg                 = $blue-deep
-$selection-color              = white
+$selection-bg                 = $green-deep
+$selection-color              = $whitesmoke
 
 
 
@@ -91,7 +98,7 @@ $font-weight-bolder       = 700
 
 
 // Font size
-$font-size-base           = 14px
+$font-size-base           = 17px
 $font-size-small          = $font-size-base - 2px
 $font-size-smaller        = $font-size-base - 4px
 $font-size-large          = $font-size-base + 2px
@@ -100,7 +107,7 @@ $font-size-larger         = $font-size-base + 4px
 
 // Headings font size
 $font-size-headings-step    = 2px
-$font-size-headings-base    = 24px
+$font-size-headings-base    = 25px
 $font-size-headings-small   = $font-size-headings-base - $font-size-headings-step
 $font-size-headings-smaller = $font-size-headings-small - $font-size-headings-step
 $font-size-headings-large   = $font-size-headings-base + $font-size-headings-step
@@ -126,14 +133,14 @@ $zindex-5       = 1050
 // Table
 // --------------------------------------------------
 $table-width                    = 100%
-$table-border-color             = $gray-lighter
-$table-font-size                = 14px
+$table-border-color             = $green-light
+$table-font-size                = 17px
 $table-content-alignment        = left
 $table-content-vertical         = middle
 $table-th-font-weight           = 700
 $table-cell-padding             = 8px
 $table-cell-border-right-color  = $gainsboro
-$table-cell-border-bottom-color = $gray-lighter
+$table-cell-border-bottom-color = $green-light
 $table-row-odd-bg-color         = #f9f9f9
 $table-row-hover-bg-color       = $whitesmoke
 
@@ -142,9 +149,9 @@ $table-row-hover-bg-color       = $whitesmoke
 // Code & Code Blocks
 // --------------------------------------------------
 $code-font-family               = $font-family-monospace
-$code-font-size                 = 13px
+$code-font-size                 = 16px
 $code-background                = $gainsboro
-$code-foreground                = $black-light
+$code-foreground                = $red
 $code-border-radius             = 4px
 
 
@@ -154,15 +161,15 @@ $code-border-radius             = 4px
 
 $btn-font-weight                = normal
 
-$btn-default-radius             = 0
-$btn-default-bg                 = $black-deep
-$btn-default-color              = white
-$btn-default-font-size          = 14px
+$btn-default-radius             = 2
+$btn-default-bg                 = $green-deep
+$btn-default-color              = $whitesmoke
+$btn-default-font-size          = 15px
 $btn-default-border-width       = 2px
-$btn-default-border-color       = $black-deep
-$btn-default-hover-bg           = white
-$btn-default-hover-color        = $black-deep
-$btn-default-hover-border-color = $black-deep
+$btn-default-border-color       = $green-deep
+$btn-default-hover-bg           = $whitesmoke
+$btn-default-hover-color        = $green-deep
+$btn-default-hover-border-color = $green-deep
 
 
 
@@ -177,11 +184,11 @@ $pagination-link-border         = $gainsboro
 
 $pagination-link-hover-bg       = transparent
 $pagination-link-hover-color    = $link-color
-$pagination-link-hover-border   = $black-deep
+$pagination-link-hover-border   = $green-deep
 
-$pagination-active-bg           = $grey-light
-$pagination-active-color        = white
-$pagination-active-border       = $grey-light
+$pagination-active-bg           = $green-grey
+$pagination-active-color        = $whitesmoke
+$pagination-active-border       = $green-grey
 
 
 
@@ -206,7 +213,7 @@ $gap-between-main-and-footer    = 100px
 // Headband
 // --------------------------------------------------
 $headband-height                = 3px
-$headband-bg                    = $black-deep
+$headband-bg                    = $green-deep
 
 
 
@@ -214,24 +221,24 @@ $headband-bg                    = $black-deep
 // Variables for header section elements.
 // --------------------------------------------------
 
-$head-bg                        = white
+$head-bg                        = $whitesmoke
 
 // Site Meta
 $site-meta-text-align           = center
-$brand-color                    = white
-$brand-hover-color              = white
-$brand-bg                       = $black-deep
+$brand-color                    = $whitesmoke
+$brand-hover-color              = $whitesmoke
+$brand-bg                       = $green-deep
 
 $logo-font-size                 = 20px
 $logo-font-size                 = unit(hexo-config('font.logo.size'), px) if hexo-config('font.logo.size') is a 'unit'
 
-$site-subtitle-color            = $grey-dark
-$subtitle-font-size             = 13px
-$subtitle-color                 = $grey-dark
+$site-subtitle-color            = $green-light
+$subtitle-font-size             = 15px
+$subtitle-color                 = $green-grey
 
 // Menu
 $menu-link-border               = transparent
-$menu-link-hover-border         = $black-deep
+$menu-link-hover-border         = $green-deep
 
 
 
@@ -245,9 +252,9 @@ $posts-expand-title-font-weight = $font-weight-normal
 $posts-collapse-left            = 55px
 $posts-collapse-left-mobile     = 5px
 
-$read-more-color                = white
-$read-more-font-size            = 14px
-$read-more-bg-color             = $black-deep
+$read-more-color                = $whitesmoke
+$read-more-font-size            = 15px
+$read-more-bg-color             = $green-deep
 $read-more-border-radius        = 0
 
 
@@ -256,37 +263,37 @@ $read-more-border-radius        = 0
 // Sidebar
 // Variables for sidebar section elements.
 // --------------------------------------------------
-$sidebar-nav-color                    = $black-light
+$sidebar-nav-color                    = $green-light
 $sidebar-nav-hover-color              = $whitesmoke
-$sidebar-highlight                    = $blue-bright
+$sidebar-highlight                    = $green-grass
 
 $site-author-image-padding            = 2px
 $site-author-image-width              = 96px
 $site-author-image-height             = auto
 $site-author-image-border-width       = 2px
-$site-author-image-border-color       = $black-dim
+$site-author-image-border-color       = $green-deep
 
 $site-author-name-margin              = 5px 0 0
 $site-author-name-color               = $whitesmoke
 $site-author-name-align               = center
 $site-author-name-weight              = normal
 
-$site-description-font-size           = 14px
-$site-description-color               = $grey-dark
+$site-description-font-size           = 15px
+$site-description-color               = $green-light
 $site-description-margin-top          = 5px
 $site-description-align               = center
 
 $site-state-align                     = center
 $site-state-item-count-font-size      = 18px
 $site-state-item-count-color          = inherit
-$site-state-item-name-font-size       = 13px
+$site-state-item-name-font-size       = 14px
 $site-state-item-name-color           = inherit
-$site-state-item-border-color         = $black-dim
+$site-state-item-border-color         = $green-dim
 
-$toc-link-color                       = $grey-dark
-$toc-link-border-color                = $black-light
-$toc-link-hover-color                 = $grey-light
-$toc-link-hover-border-color          = $grey-light
+$toc-link-color                       = $green-grey
+$toc-link-border-color                = $green-grass
+$toc-link-hover-color                 = $whitesmoke
+$toc-link-hover-border-color          = $whitesmoke
 $toc-link-active-color                = $sidebar-highlight
 $toc-link-active-border-color         = $sidebar-highlight
 $toc-link-active-current-color        = $sidebar-highlight
@@ -297,13 +304,13 @@ $toc-link-active-current-border-color = $sidebar-highlight
 // --------------------------------------------------
 
 // Back to top
-$b2t-opacity                  = 1
+$b2t-opacity                  = 0.9
 $b2t-position-bottom          = -100px
 $b2t-position-bottom-on       = 19px
 $b2t-position-right           = 50px
 $b2t-font-size                = 12px
-$b2t-color                    = white
-$b2t-bg-color                 = $black-deep
+$b2t-color                    = $whitesmoke
+$b2t-bg-color                 = $green-deep
 
 
 //  .post-expand .post-eof
