--- a/themes/next/source/css/_common/components/header/header.styl
+++ b/themes/next/source/css/_common/components/header/header.styl
@@ -1,4 +1,7 @@
-.header { background: $head-bg; }
+.header { 
+	background: url(../images/head-bg.jpg) center;
+	background-size: cover;
+}
 
 .header-inner { position: relative; }
 
