add background image and gulp

--- a/themes/next/source/css/_variables/base.styl
+++ b/themes/next/source/css/_variables/base.styl
@@ -232,7 +232,7 @@ $brand-bg                       = $green-deep
 $logo-font-size                 = 20px
 $logo-font-size                 = unit(hexo-config('font.logo.size'), px) if hexo-config('font.logo.size') is a 'unit'
 
-$site-subtitle-color            = $green-light
+$site-subtitle-color            = $green-dim
 $subtitle-font-size             = 15px
 $subtitle-color                 = $green-grey
 
