--- a/themes/next/source/css/_common/components/header/header.styl
+++ b/themes/next/source/css/_common/components/header/header.styl
@@ -1,5 +1,5 @@
-.header { 
-	background: url(../images/head-bg.jpg) center;
+.header {
+	//background: url(../images/head-bg.jpg) center;
 	background-size: cover;
 }
 
