--- a/themes/next/source/css/_common/scaffolding/base.styl
+++ b/themes/next/source/css/_common/scaffolding/base.styl
@@ -10,7 +10,7 @@ body {
   font-size: $font-size-base;
   line-height: $line-height-base;
   color: $text-color;
-  background: url(../images/head-bg.jpg) no-repeat center;
+  //background: url(../images/head-bg.jpg) no-repeat center;
   background-size: cover;
   background-repeat: repeat-y;
 
