--- a/docs/.vuepress/theme/styles/config.styl
+++ b/docs/.vuepress/theme/styles/config.styl
@@ -2,7 +2,7 @@
 $accentColor = #6eafcc
 $textColor = #2c3e50
 $borderColor = #eaecef
-$codeBgColor = #282c34
+$codeBgColor = #494b4c
 $arrowBgColor = #ccc
 
 // layout
